Horizontal scroll resolved, email subscription ovarlap resolved

--- a/responsive.css
+++ b/responsive.css
@@ -2,11 +2,13 @@
 {
     .banner-image img {
         width: 100%;
+        max-height: 450px;
       }
 
       .feature-item{
           text-align: center;
       }
+
 }
 
 @media screen  and (max-width:1200px){
@@ -14,4 +16,41 @@
         width: 100%;
         height: 300px;
       }
+}
+
+@media screen and (max-width: 576px) {
+     
+    .email-subscription input[type="text"] {
+        width: 50%;
+      }
+    
+      .email-subscription input[type="submit"] {
+        position: absolute;
+        right: 10px;
+      }
+}
+
+@media screen and (min-width: 768px) and (max-width:1200px){
+     
+    .email-subscription input[type="text"] {
+        width: 40%;
+      }
+    
+      .email-subscription input[type="submit"] {
+        position: absolute;
+        right: 10px;
+      }
+}
+
+@media screen and (min-width: 320px) and (max-width:576px){
+    .logos{
+         padding-top: 50px;
+     }
+ }
+ 
+
+@media screen and (min-width: 576px) and (max-width:768px){
+   .logos{
+        padding-top: 100px;
+    }
 }
